<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Journal</string>
    <string name="detail_name">Entry Detail</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_label">Title:</string>
    <string name="notes_label">Notes:</string>
    <string name="title_hint">Enter a title</string>
    <string name="notes_hint">Enter notes</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="add_new">Add New</string>
    
</resources>